################################################################################
## Export and Install (headers only)
################################################################################
## install the headers
install(FILES "cfortran.h"
  DESTINATION "${INSTALL_INCLUDE_DIR}/cfortran" COMPONENT dev)
